# gfx_hal_experiments

./: Cargo.toml  LICENSE  README.md
src/: context.rs  main.rs
src/shader/: frag.spv  fragment.frag  vert.spv  vertex.vert
